src/test/ui/nll/issue-54382-use-span-of-tail-of-block.stderr
error[E0597]: `_thing1` does not live long enough
  --> $DIR/issue-54382-use-span-of-tail-of-block.rs:7:30
   |
LL |             D("other").next(&_thing1)
   |                              ^^^^^^^ borrowed value does not live long enough
...
LL |     }
   |     - `_thing1` dropped here while still borrowed
LL | 
LL |     ;
   |     - borrowed value needs to live until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
